# axioma-policy

./: CMakeLists.txt  README.md  ax-rtm-verify.py
include/axilog/: policy.h  types.h
src/: policy.c
tests/identity/: test_policy_totality.c
